# Aleb11111

./: README.md
Assembly/Project 1/: new 1.asm  new 1.lst
Assembly/Project 2/: Ex.asm  Ex.lst
Assembly/Project 3/: new 1.asm  new 1.lst
Assembly/Writing into file/: new 1.asm  new 1.lst
C++/Movie Rental/: util.cpp  util.h
C++/a89-Aleb1111/: CMakeLists.txt  Main.cpp
C/Inteligent Refrigerator/: CMakeLists.txt  main.c
C/Inteligent Refrigerator/Domains/: DynArr.c  DynArr.h  Product.c  Product.h
C/Inteligent Refrigerator/Repo/: Repository.c  Repository.h
C/Inteligent Refrigerator/Services/: Service.c  Service.h
C/Inteligent Refrigerator/Tests/: tests.c  tests.h
C/Inteligent Refrigerator/UI/: UI.c  UI.h
C/Inteligent Refrigerator/Undo+Redo/: Undo+Redo.h
C/Inteligent Refrigerator/Undo_Redo/: UndoRedo.c  Undo_Redo.h
Graphs/: GraphDomain.py  Main_orientat.py  Main_undirected.py  UndirectedGraph.py  copy_file.txt  copy_graph,txt  copy_graph.txt  initial_graph.txt  random.undirected2.txt  random_graph2.txt  random_graph3.txt  random_undirected.txt  venv.rar
Java/: ToyLanguage Interpreter.rar
Lisp/L1/: WhatEverythingDoes.docx  l1_a.lisp  l1_b.lisp  l1_c.lisp  l1_d.lisp
Lisp/L2/: l2.lisp
Lisp/L3/: l3_11.lisp
Octave/Lab 1/: f1_lab1.m  f2_lab1.m  lab1.m
Octave/Lab 2/: Lab2.m  Lab2_CoinProblem.m  Lab2_Coin_f.m
Octave/Lab 3/: Lab3Ex2_Poisson.m  lab3.m  lab3Ex2.m
Prolog/P1/: ce e ce.docx  pb1_9.pl  pb1_9.pl~
Prolog/P2/: doc.docx  pb11.pl  (+2 more)
Python Projects/: Generator Nume.py  Gnome and Insert Sort Complexity.py  Gnome sort.py  battleship.rar
(+37 files in other folders)
